# zk-zoo

./: Cargo.toml  README.md
ark-kzg/: Cargo.toml
ark-kzg/examples/: kzg10.rs
ark-sumcheck/: Cargo.toml  README.md
ark-sumcheck/examples/: sumcheck.rs
ark-sumcheck/src/: lib.rs  polynomial.rs  solomon_reed_code.rs
ark-sumcheck/src/sumcheck/: mod.rs  protocol.rs  prover.rs  verifier.rs
halo2-plonk/examples/: poseidon_hash.rs
halo2-plonk/src/: lib.rs
plonk/: Cargo.toml
plonky3/: Cargo.toml
plonky3/examples/: p3-blake3-merkle-tree.rs  p3-poseidon2-merkle-tree.rs
plonky3/src/: ark_merkletree.rs  lib.rs  merkletree.rs
