[package]
name = "plonk-example"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = "0.6.4"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0" }
halo2curves = { version = "0.6.1", features = ["derive_serde"] }
halo2_poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon-gadget" }
